fix minor spacing inconsistency

--- a/assets/css/_index.css
+++ b/assets/css/_index.css
@@ -74,7 +74,7 @@
  */
 .widget-clips {
   &__title {
-    margin: 0 1rem .75rem;
+    margin: 0 1rem .5rem;
     font-family: var(--font-serif);
     font-size: 1.2rem;
     font-style: italic;
